<resources>
    <string name="app_name">Easy Resume Builder</string>

    <string name="action_settings">Settings</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>

    <string name="view_resume">View Resume</string>
    <string name="resume_guide">Resume Guide</string>
    <string name="create_resume">Create Resume</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_information">Contact Information</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="objective">Objective</string>
    <string name="description">Description</string>
    <string name="experience">Experience</string>
    <string name="designation">Designation</string>
    <string name="organization">Organization</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="role">Role</string>
    <string name="education_information">Education Information</string>
    <string name="course_name">Course Name</string>
    <string name="institute_name">Institute Name</string>
    <string name="percentagecgpa">Percentage/CGPA</string>
    <string name="add_other_information">Add Other Information</string>
    <string name="project_information">Project Information</string>
    <string name="project_title">Project Title</string>
    <string name="description_project">Description</string>
    <string name="front_end">Front End</string>
    <string name="back_end">Back End</string>
    <string name="start_date_project">Start Date</string>
    <string name="end_date_project">End Date</string>
    <string name="team_members">Team_Members</string>
    <string name="curricular_activities">Curricular Activities</string>
    <string name="extra_activities">Extra Activities</string>
    <string name="other_information">Other Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="marital_status">Marital Status</string>
    <string name="hobbies">Hobbies</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_other_information_personal">Add Other Information</string>
    <string name="who_we_are">Who we are?</string>
    <string name="resume_builder_is_the_applicatio">"                  Resume Builder is the application in which you can create your own Resume in different formate in just a minutes."</string>
    <string name="features">Features</string>
    <string name="different_formate">"          - Different Formate"</string>
    <string name="save_resume">"          - Save Resume"</string>
    <string name="edit_resume">"          - Edit Resume"</string>
    <string name="generate_pdf">"          - Generate Pdf"</string>
    <string name="different_language">"          - Different Language(Hindi,English)"</string>
    <string name="add_dynamically">"          - Add Dynamically"</string>
    <string name="provide_5_template_design">"          - Provide 5 Template Design"</string>
    <string name="language_known">Language Known</string>
    <string name="technical_skills">Technical Skills</string>
    <string name="other_skills">Other Skills</string>
    <string name="strength">Strength</string>
    <string name="field_of_interest">Field Of Interest</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="display">DISPLAY</string>
    <string name="start_date_experience">Start Date</string>
    <string name="end_date_experience">End Date</string>
    <string name="create_pdf">Create PDF</string>
    <string name="co_curricular_activities">Co-Curricular Activities</string>
    <string name="send_pdf">Send PDF</string>
    <string name="career_objective">CAREER OBJECTIVE</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="Seeking_a_position_at_XYZ">Seeking a position at XYZ Company where I can maximize my 10+ years of management, quality assurance, program development, and training experience.</string>
    <string name="contact">CONTACT</string>
</resources>
