<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.poorvi.slidertablayout.AboutUs">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:background="@color/colorPrimary"
        android:id="@+id/text"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/textColorPrimary"
        android:textAlignment="center"
        android:padding="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/who_we_are"
        android:id="@+id/text1"
        android:textColor="@color/navigationBarColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:padding="10dp"
        android:id="@+id/text2"
        android:text="@string/resume_builder_is_the_applicatio"
        android:textColor="@color/navigationBarColor"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/text3"
        android:text="@string/features"
        android:textColor="@color/navigationBarColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:padding="10dp"
        android:id="@+id/text4"
        android:text="@string/different_formate"
        android:textColor="@color/navigationBarColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text4"
        android:padding="10dp"
        android:id="@+id/text5"
        android:text="@string/save_resume"
        android:textColor="@color/navigationBarColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5"
        android:padding="10dp"
        android:id="@+id/text6"
        android:text="@string/edit_resume"
        android:textColor="@color/navigationBarColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text6"
        android:padding="10dp"
        android:id="@+id/text7"
        android:text="@string/generate_pdf"
        android:textColor="@color/navigationBarColor"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text7"
        android:padding="10dp"
        android:id="@+id/text9"
        android:text="@string/different_language"
        android:textColor="@color/navigationBarColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text9"
        android:padding="10dp"
        android:id="@+id/text10"
        android:text="@string/add_dynamically"
        android:textColor="@color/navigationBarColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text10"
        android:padding="10dp"
        android:id="@+id/text11"
        android:text="@string/provide_5_template_design"
        android:textColor="@color/navigationBarColor"/>
</RelativeLayout>
