<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_other_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background"
        android:orientation="vertical" >

        <TextView
            android:text="@string/other_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/other_info" />

        <EditText
            android:id="@+id/language"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/language_known"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/tech_skills"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/technical_skills"
            android:inputType="textPersonName" >
        </EditText>


        <EditText
            android:id="@+id/other_skills"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/other_skills"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/strength"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/strength"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/foi"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/field_of_interest"
            android:inputType="textPersonName" >
        </EditText>

    </LinearLayout>
    <Button

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:translationY="-30dp"
        android:background="@drawable/save"
        android:layout_marginLeft="170dp"
        android:id="@+id/button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />


    <Button
        android:text="@string/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />
</LinearLayout>

