<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal="true"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/viewresume"
                style="@style/HomeButton"
                android:drawableTop="@drawable/capture12"
                android:onClick="onButtonClicker"
                android:text="@string/view_resume" />

            <Button
                android:id="@+id/resumeguide"
                style="@style/HomeButton"
                android:drawableTop="@drawable/resguide"
                android:onClick="onButtonClicker"
                android:text="@string/resume_guide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/createresume"
                style="@style/HomeButton"
                android:drawableTop="@drawable/create1"
                android:onClick="onButtonClicker"
                android:text="@string/create_resume" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/aboutus"
                style="@style/HomeButton"
                android:drawableTop="@drawable/aboutus"
                android:onClick="onButtonClicker"
                android:text="@string/about_us" />

            <Button
                android:id="@+id/rateus"
                style="@style/HomeButton"
                android:drawableTop="@drawable/rateas"
                android:onClick="onButtonClicker"
                android:text="@string/rate_us" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>