<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/educationLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/add1"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background"
        android:orientation="vertical" >

        <TextView
            android:text="@string/education_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/education_info" />


        <EditText
            android:id="@+id/cource"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/course_name"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/institute"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/institute_name"
            android:inputType="textWebEmailAddress" >
        </EditText>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:weightSum="2" >
        <EditText
            android:id="@+id/startDateET"
            style="@style/EditTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:inputType="textWebEditText"
            android:background="@drawable/card_background"
            android:hint="@string/start_date" >
        </EditText>

        <EditText
            android:id="@+id/endDateET"
            style="@style/EditTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textWebEditText"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/card_background"
            android:hint="@string/end_date" >
        </EditText>
        </LinearLayout>

        <EditText
            android:id="@+id/percentageCgpa"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/percentagecgpa"
            android:inputType="textWebEditText" >
        </EditText>

        <EditText
            android:id="@+id/otherInfoET"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/add_other_information"
            android:inputType="textWebEditText" >
        </EditText>
    </LinearLayout>
    <Button

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:translationY="-30dp"
        android:background="@drawable/save"
        android:layout_marginLeft="120dp"
        android:id="@+id/button" />

    <ImageButton
        android:id="@+id/add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="200dp"
        android:background="@drawable/circle_background"
        android:src="@drawable/ic_action_new_light"
        android:translationY="-80dp" >
    </ImageButton>

    <!--<TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />


    <Button
        android:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />
-->
</LinearLayout>
</ScrollView>


