<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_background"
        android:orientation="vertical" >

        <TextView
            android:text="@string/contact_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/contact_info" />

        <EditText
            android:id="@+id/name"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/phone_no"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_no"
            android:inputType="phone" >
        </EditText>

        <EditText
            android:id="@+id/email"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >
        </EditText>

        <EditText
            android:id="@+id/address"
            style="@style/EditTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/permanent_address"
            android:inputType="textPostalAddress">
        </EditText>
    </LinearLayout>

    <Button

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:translationY="-30dp"
        android:background="@drawable/save"
        android:layout_marginLeft="170dp"
        android:id="@+id/button" />


<!--    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />


    <Button
        android:text="Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2" />-->

</LinearLayout>
